# audiosynthesizer

./: CMakeLists.txt  MyAudio.hpp  README.md  a.out  main.cpp
